<resources>
    <string name="app_name">Will It Rain</string>
    <string name="gui_title" />
    <string name="smhi_title">FORECAST FROM SMHI</string>
    <string name="metno_title">FORECAST FROM MET.NO</string>
    <string name="updated_at">Updated at:</string>
    <string name="willitrainquestion">Will it rain?</string>
    <string name="location">Location: </string>
    <string name="refresh">Refresh</string>
    <string name="changeToMetno">Met.no</string>
    <string name="changeToSmhi">Smhi</string>
    <string name="action_about">About</string>
    <string name="iconInfo">Icons by ColourCreatype, https://freeicons.io/icon-list/weather-icon-set-4 and oNline Web Fonts, www.onlinewebfonts.com</string>
    <string name="copyright">Copyright © Paheco 2023</string>
    <string name="willitrainanswer">Will it rain?</string>

    <string-array name="hours">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>