<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartFragment">

    <TextView
        android:id="@+id/smhiWeathersymbol"
        android:layout_width="353dp"
        android:layout_height="35dp"
        android:layout_marginEnd="32dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/smhiweathertypeLabel"
        app:layout_constraintTop_toBottomOf="@+id/smhiweathertypeLabel"
        tools:text="Clear" />

    <TextView
        android:id="@+id/smhiWinddir"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smhiwinddirLabel"
        tools:text="100" />

    <TextView
        android:id="@+id/headlineTV"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#AFBAFD"
        android:text="@string/gui_title"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/smhiTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/smhi_title"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headlineTV" />

    <TextView
        android:id="@+id/smhiTempTV"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smhitempLabel"
        tools:text="32.0C" />

    <TextView
        android:id="@+id/smhiWindspeed"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="@+id/smhiwindspeedLabel"
        app:layout_constraintTop_toBottomOf="@+id/smhiwindspeedLabel"
        tools:text="25m/S" />

    <TextView
        android:id="@+id/smhiPressure"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="@+id/smhipressureLabel"
        app:layout_constraintTop_toBottomOf="@+id/smhipressureLabel"
        tools:text="1040hPa" />

    <TextView
        android:id="@+id/smhiHumTV"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smhihumidityLabel"
        tools:text="100%" />

    <TextView
        android:id="@+id/smhitxtUpdatedAt"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="#AFBAFD"
        android:gravity="bottom|center"
        android:padding="5dip"
        android:text="@string/updated_at"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smhirefreshBTN" />

    <Button
        android:id="@+id/smhirefreshBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/refresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/metnoBtn" />

    <Button
        android:id="@+id/metnoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/changeToMetno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smhiWeathersymbol" />

    <TextView
        android:id="@+id/smhitempLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Temperature"
        app:layout_constraintStart_toStartOf="@+id/smhiTempTV"
        app:layout_constraintTop_toBottomOf="@+id/smhiTV" />

    <TextView
        android:id="@+id/smhihumidityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Humidity"
        app:layout_constraintStart_toStartOf="@+id/smhiHumTV"
        app:layout_constraintTop_toBottomOf="@+id/smhiTV" />

    <TextView
        android:id="@+id/smhiwindspeedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Wind speed"
        app:layout_constraintStart_toStartOf="@+id/smhiTempTV"
        app:layout_constraintTop_toBottomOf="@+id/smhiTempTV" />

    <TextView
        android:id="@+id/smhiwinddirLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Wind direction"
        app:layout_constraintStart_toStartOf="@+id/smhiHumTV"
        app:layout_constraintTop_toBottomOf="@+id/smhiHumTV" />

    <TextView
        android:id="@+id/smhipressureLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Air pressure"
        app:layout_constraintStart_toStartOf="@+id/smhiWindspeed"
        app:layout_constraintTop_toBottomOf="@+id/smhiWindspeed" />

    <TextView
        android:id="@+id/smhiweathertypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Weather type"
        app:layout_constraintStart_toStartOf="@+id/smhiPressure"
        app:layout_constraintTop_toBottomOf="@+id/smhiPressure" />

</androidx.constraintlayout.widget.ConstraintLayout>